--- a/themes/bootstrap/ucp-front.html
+++ b/themes/bootstrap/ucp-front.html
@@ -2,7 +2,7 @@
     <div class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <button  class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -37,12 +37,12 @@
 <div class="container">
 {if="$is_message"}
 <div class="alert alert-warning alert-dismissable">
-  <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  <button  class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
   {$message}
 </div>
 {/if}
 <p><b>Willkommen bei JustAsk, {$user_name}</b></p>
-<p>Bis jetzt hast du {$answer_count == 0 ? "no" : ($answer_count == 1 ? "one" : $answer_count)} Frage{$answer_count != 1 ? "n" : ""} beantwortet</p>
+<p>Bis jetzt hast du {$answer_count == 0 ? "keine" : ($answer_count == 1 ? "eine" : $answer_count)} Frage{$answer_count != 1 ? "n" : ""} beantwortet</p>
 
 {if="$twitter_on"}
 <hr />
@@ -52,7 +52,7 @@
     <div class="input-group">
       <input type="text" id="tweet_text" name="tweet_text" value="Fragt mich etwas! - {$url}" class="form-control">
       <span class="input-group-btn">
-        <button class="btn btn-primary" type="button">Tweet</button>
+        <button class="btn btn-primary" >Tweet</button>
       </span>
     </div><!-- /input-group -->
   </div><!-- /.col-lg-6 -->
