--- a/themes/bootstrap/pagination.html
+++ b/themes/bootstrap/pagination.html
@@ -3,7 +3,7 @@
 {if="$pagenum > 1"}
   <li><a href="{$page_self}?page={$pagenum == 1 ? 1 : $pagenum - 1}{$add_params}">&laquo;</a></li>
 {else}
-  <li class="disabled">&laquo;</li>
+  <li class="disabled"><a href="#">&laquo;</a></li>
 {/if}
 {loop="pages"}
   <li{$pagenum == ($counter + 1) ? ' class="active"' : ''}><a href="{$page_self}?page={$counter + 1}{$add_params}">{$counter+1}</a></li>
@@ -11,7 +11,7 @@
 {if="$pagenum < $last_page"}
   <li><a href="{$page_self}?page={$pagenum == $last_page ? $last_page : $pagenum + 1}{$add_params}">&raquo;</a></li>
 {else}
-  <li class="disabled">&raquo;</li>
+  <li class="disabled"><a href="#">&raquo;</a></li>
 {/if}
 </ul>
 </center>
